--- a/basket.html
+++ b/basket.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html data-theme="light" lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tailwind</title>
+    <title>API | basket page</title>
     <link rel="stylesheet" href="./src/output.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
   </head>
   <body>
@@ -39,32 +35,14 @@
               tabindex="0"
               class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
             >
-              <li><a>Homepage</a></li>
+              <li><a href="./index.html">Homepage</a></li>
               <li><a>Portfolio</a></li>
               <li><a>About</a></li>
             </ul>
           </div>
         </div>
         <div class="navbar-center">
-          <label class="input">
-            <svg
-              class="h-[1em] opacity-50"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-            >
-              <g
-                stroke-linejoin="round"
-                stroke-linecap="round"
-                stroke-width="2.5"
-                fill="none"
-                stroke="currentColor"
-              >
-                <circle cx="11" cy="11" r="8"></circle>
-                <path d="m21 21-4.3-4.3"></path>
-              </g>
-            </svg>
-            <input id="search" type="search" required placeholder="Search" />
-          </label>
+          <a href="./index.html"><b>Home</b></a>
         </div>
         <div class="navbar-end">
           <button class="btn btn-ghost btn-circle">
@@ -108,43 +86,12 @@
               />
             </svg>
           </label>
-
-          <a href="./basket.html" class="btn btn-ghost btn-circle">
-            <div class="indicator">
-              <i class="fa-solid fa-cart-shopping text-[20px]"></i>
-              <!-- <span class="badge badge-xs badge-primary indicator-item"></span> -->
-            </div>
-          </a>
         </div>
       </div>
     </header>
 
-    <main class="mt-20">
-      <div class="align-elements">
-        <swiper-container
-          class="mySwiper h-[500px] mb-20 rounded-2xl overflow-hidden"
-          pagination="true"
-          pagination-clickable="true"
-          navigation="false"
-          space-between="30"
-          centered-slides="true"
-          autoplay-delay="3900"
-          autoplay-disable-on-interaction="false"
-        >
-          <template id="banner">
-            <swiper-slide>
-              <a id="banner-href">
-                <img
-                  id="banner-image"
-                  class="rounded-2xl w-full h-full"
-                  src="https://images.uzum.uz/d0e9n333uvph509t9e50/main_page_banner.jpg"
-                  alt=""
-                />
-              </a>
-            </swiper-slide>
-          </template>
-        </swiper-container>
-
+    <main>
+      <div class="align-elements mt-20">
         <ul
           id="product-list"
           class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-5"
@@ -168,7 +115,7 @@
                 <p class="price line-through opacity-50">10 000 000</p>
                 <p class="discount-price">4 990 000</p>
                 <div class="card-actions justify-end">
-                  <button id="shopping" class="btn btn-primary">
+                  <button id="shopping" class="btn !btn-error">
                     <i class="fa-solid fa-cart-shopping"></i>
                   </button>
                 </div>
@@ -246,7 +193,7 @@
     </footer>
 
     <script src="./src/js/theme.js"></script>
-    <script type="module" src="./src/js/app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+    <!-- <script type="module" src="./src/js/app.js"></script> -->
+    <script type="module" src="./src/js/basket.js"></script>
   </body>
 </html>
